~~~~~~~~~~~~~~~~
------------------------------------------------------------------------------------------------------------------------
Git Master
------------------------------------------------------------------------------------------------------------------------

ENGINE:
	- Fixed: Error on backup: Unable to change mode for...

GUI:
	- Fixed: Unable to add hosting plan (reseller level)

Tickets:
	- Fixed #777: Bug - Autoinstaller - Two entries for imscp-autoinstall option -h

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc2.2
------------------------------------------------------------------------------------------------------------------------

2013-06-04: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc2.2

GUI:
	- Fixed: Custom DNS feature not working due to missing files

VENDOR:
	- Updated jQuery to v1.10.1
	- Updated jQuery UI to v1.10.3

Tickets:
	Fixed #640: Bug - AliasSubdomain won't work when Alias is a redirect
	Fixed #767: Update -jQuery 1.10.1 released
	Fixed #769: Review - Language issue in imscp GUI

------------------------------------------------------------------------------------------------------------------------
i-MSCP 1.1.0-rc2.1
------------------------------------------------------------------------------------------------------------------------

2013-06-02: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc2.1

CONFIGS:
	- Added MariaDb support
	- Added named.conf.local and named.conf.options files
	- Added skel directory for Web folder skeletons (Httpd server impls.)
	- Fixed: Useless section must be removed in generated Apache configuration files
	- Fixed: diff package isn't available for Ubuntu > 12.04 (replaced by diffutils)
	- Removed packages file for Ubuntu Oneiric Ocelot (EOL 20130509)
	- Updated php.ini files

ENGINE:
	- Added hooks for user module
	- Added hooks.d directory for storage of engine hook files
	- Added support for Apache + PHP FPM